# stm32f103-light-project

./: .gitignore  CMakeLists.txt  README.md  build.sh  linker.ld
CMSIS/Device/ST/STM32F1xx/Source/: system_stm32f1xx.c
src/: main.c  startup_stm32f103c8t6.s
